refactor: improve UnreadsViewService with method extraction and type-safe enum
- Extract getUnreads() into smaller, focused methods for better readability
- Apply Lombok annotations to UnreadMessageData inner class
- Introduce UnreadSortOption enum to replace string-based sort options
- Improve code comments for channel access logic