@@ -2,14 +2,15 @@ package com.slack.unread.service;
 
 import com.slack.channel.domain.Channel;
 import com.slack.channel.domain.ChannelType;
-import com.slack.message.domain.Message;
-import com.slack.unread.dto.UnreadMessageResponse;
-import com.slack.unread.dto.UnreadsViewResponse;
 import com.slack.channel.repository.ChannelMemberRepository;
 import com.slack.channel.repository.ChannelRepository;
+import com.slack.message.domain.Message;
 import com.slack.message.repository.MessageRepository;
-import com.slack.workspace.repository.WorkspaceMemberRepository;
+import com.slack.unread.dto.UnreadMessageResponse;
+import com.slack.unread.dto.UnreadSortOption;
+import com.slack.unread.dto.UnreadsViewResponse;
 import com.slack.unread.mapper.UnreadMapper;
+import com.slack.workspace.repository.WorkspaceMemberRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -40,61 +41,74 @@ public class UnreadsViewService {
      * Get aggregated unread messages across all channels for a user.
      *
      * @param userId User ID
-     * @param sort Sort option: "newest", "oldest", or "channel"
-     * @param limit Maximum number of messages to return
+     * @param sort   Sort option: "newest", "oldest", or "channel"
+     * @param limit  Maximum number of messages to return
      * @return UnreadsViewResponse with sorted unread messages
      */
     public UnreadsViewResponse getUnreads(Long userId, String sort, Integer limit) {
-        // Validate and set defaults
-        String sortOption = (sort != null && !sort.isEmpty()) ? sort.toLowerCase() : "newest";
-        int messageLimit = (limit != null && limit > 0) ? Math.min(limit, MAX_LIMIT) : DEFAULT_LIMIT;
+        UnreadSortOption sortOption = UnreadSortOption.fromString(sort);
+        int messageLimit = normalizeLimit(limit);
 
-        // Get all channel IDs where user can access:
-        // 1. PRIVATE channels: user is a ChannelMember
-        // 2. PUBLIC channels: user is a WorkspaceMember
-        Set<Long> channelIds = new HashSet<>();
-        
-        // Get PRIVATE channels where user is a member
-        List<Long> privateChannelIds = channelMemberRepository.findChannelIdsByUserId(userId);
-        channelIds.addAll(privateChannelIds);
-        
-        // Get PUBLIC channels from all workspaces where user is a member
+        Set<Long> channelIds = getAccessibleChannelIds(userId);
+        if (channelIds.isEmpty()) {
+            return buildEmptyResponse();
+        }
+
+        List<UnreadMessageData> unreadMessageDataList = collectUnreadMessageData(channelIds, userId, sortOption);
+        if (unreadMessageDataList.isEmpty()) {
+            return buildEmptyResponse();
+        }
+
+        List<UnreadMessageResponse> unreadMessages = buildUnreadMessages(unreadMessageDataList);
+        sortUnreadMessages(unreadMessages, sortOption);
+
+        return applyLimitAndBuildResponse(unreadMessages, messageLimit);
+    }
+
+    /**
+     * Normalize limit with default and max validation.
+     */
+    private int normalizeLimit(Integer limit) {
+        return (limit != null && limit > 0) ? Math.min(limit, MAX_LIMIT) : DEFAULT_LIMIT;
+    }
+
+    /**
+     * Get all channel IDs that the user can access.
+     * Includes PRIVATE channels where user is a member and PUBLIC channels in user's workspaces.
+     */
+    private Set<Long> getAccessibleChannelIds(Long userId) {
+
+        // Get channels where user is explicitly a member (includes both PRIVATE and PUBLIC channels)
+        List<Long> memberChannelIds = channelMemberRepository.findChannelIdsByUserId(userId);
+        Set<Long> channelIds = new HashSet<>(memberChannelIds);
+
+        // Additionally, get all PUBLIC channels from workspaces where user is a member
+        // (PUBLIC channels are accessible to all workspace members)
         List<Long> workspaceIds = workspaceMemberRepository.findByUserId(userId).stream()
                 .map(wm -> wm.getWorkspace().getId())
-                .collect(Collectors.toList());
-        
+                .toList();
+
         for (Long workspaceId : workspaceIds) {
-            List<Channel> publicChannels = channelRepository.findByWorkspaceId(workspaceId).stream()
+            List<Long> publicChannelIds = channelRepository.findByWorkspaceId(workspaceId).stream()
                     .filter(channel -> channel.getType() == ChannelType.PUBLIC)
-                    .collect(Collectors.toList());
-            for (Channel channel : publicChannels) {
-                channelIds.add(channel.getId());
-            }
-        }
-        
-        if (channelIds.isEmpty()) {
-            return UnreadsViewResponse.builder()
-                    .unreadMessages(Collections.emptyList())
-                    .totalCount(0)
-                    .build();
+                    .map(Channel::getId)
+                    .toList();
+            channelIds.addAll(publicChannelIds);
         }
 
-        // Collect all unread message IDs with channel info
+        return channelIds;
+    }
+
+    /**
+     * Collect unread message data from Redis for all accessible channels.
+     */
+    private List<UnreadMessageData> collectUnreadMessageData(Set<Long> channelIds, Long userId, UnreadSortOption sortOption) {
         List<UnreadMessageData> unreadMessageDataList = new ArrayList<>();
         Map<Long, String> channelNameCache = new HashMap<>();
 
         for (Long channelId : channelIds) {
-            // Get channel name (cache for reuse)
-            String channelName = channelNameCache.computeIfAbsent(channelId, id -> {
-                return channelRepository.findById(id)
-                        .map(Channel::getName)
-                        .orElse("Unknown Channel");
-            });
-
-            // Get unread message IDs from Redis
-            // For "newest" or "channel" sort, we want descending (newest first)
-            // For "oldest" sort, we want ascending (oldest first)
-            boolean descending = !"oldest".equals(sortOption);
+            String channelName = getChannelName(channelId, channelNameCache);
+            boolean descending = sortOption != UnreadSortOption.OLDEST;
             Set<String> unreadMessageIds = unreadCountService.getUnreadMessageIdsSorted(userId, channelId, descending);
 
             for (String messageIdStr : unreadMessageIds) {
@@ -107,14 +121,24 @@ public class UnreadsViewService {
             }
         }
 
-        if (unreadMessageDataList.isEmpty()) {
-            return UnreadsViewResponse.builder()
-                    .unreadMessages(Collections.emptyList())
-                    .totalCount(0)
-                    .build();
-        }
+        return unreadMessageDataList;
+    }
 
-        // Fetch message details from PostgreSQL (batch query)
+    /**
+     * Get channel name with caching.
+     */
+    private String getChannelName(Long channelId, Map<Long, String> channelNameCache) {
+        return channelNameCache.computeIfAbsent(channelId, id ->
+                channelRepository.findById(id)
+                        .map(Channel::getName)
+                        .orElse("Unknown Channel")
+        );
+    }
+
+    /**
+     * Build unread message response objects by fetching message details from database.
+     */
+    private List<UnreadMessageResponse> buildUnreadMessages(List<UnreadMessageData> unreadMessageDataList) {
         Set<Long> messageIds = unreadMessageDataList.stream()
                 .map(UnreadMessageData::getMessageId)
                 .collect(Collectors.toSet());
@@ -123,7 +147,6 @@ public class UnreadsViewService {
         Map<Long, Message> messageMap = messages.stream()
                 .collect(Collectors.toMap(Message::getId, msg -> msg));
 
-        // Build response objects
         List<UnreadMessageResponse> unreadMessages = new ArrayList<>();
         for (UnreadMessageData data : unreadMessageDataList) {
             Message message = messageMap.get(data.getMessageId());
@@ -136,26 +159,32 @@ public class UnreadsViewService {
             }
         }
 
-        // Sort according to sort option
+        return unreadMessages;
+    }
+
+    /**
+     * Sort unread messages according to the sort option.
+     */
+    private void sortUnreadMessages(List<UnreadMessageResponse> unreadMessages, UnreadSortOption sortOption) {
         switch (sortOption) {
-            case "newest":
+            case NEWEST:
                 unreadMessages.sort(Comparator.comparing(UnreadMessageResponse::getCreatedAt).reversed());
                 break;
-            case "oldest":
+            case OLDEST:
                 unreadMessages.sort(Comparator.comparing(UnreadMessageResponse::getCreatedAt));
                 break;
-            case "channel":
-                // Group by channel, then sort by createdAt DESC within each channel
+            case CHANNEL:
                 unreadMessages.sort(Comparator
                         .comparing(UnreadMessageResponse::getChannelName)
                         .thenComparing(UnreadMessageResponse::getCreatedAt, Comparator.reverseOrder()));
                 break;
-            default:
-                // Default to newest
-                unreadMessages.sort(Comparator.comparing(UnreadMessageResponse::getCreatedAt).reversed());
         }
+    }
 
-        // Apply limit
+    /**
+     * Apply limit and build final response.
+     */
+    private UnreadsViewResponse applyLimitAndBuildResponse(List<UnreadMessageResponse> unreadMessages, int messageLimit) {
         int totalCount = unreadMessages.size();
         if (unreadMessages.size() > messageLimit) {
             unreadMessages = unreadMessages.subList(0, messageLimit);
@@ -168,30 +197,24 @@ public class UnreadsViewService {
     }
 
     /**
+     * Build empty response.
+     */
+    private UnreadsViewResponse buildEmptyResponse() {
+        return UnreadsViewResponse.builder()
+                .unreadMessages(Collections.emptyList())
+                .totalCount(0)
+                .build();
+    }
+
+    /**
      * Helper class to hold unread message data before fetching from DB
      */
+    @lombok.Getter
+    @lombok.AllArgsConstructor
     private static class UnreadMessageData {
         private final Long messageId;
         private final Long channelId;
         private final String channelName;
-
-        public UnreadMessageData(Long messageId, Long channelId, String channelName) {
-            this.messageId = messageId;
-            this.channelId = channelId;
-            this.channelName = channelName;
-        }
-
-        public Long getMessageId() {
-            return messageId;
-        }
-
-        public Long getChannelId() {
-            return channelId;
-        }
-
-        public String getChannelName() {
-            return channelName;
-        }
     }
 }
 
